files/assets/style/main.scss
/* ... */
#frontpage .posts .card:hover, #userpage .posts .card:hover, #search .posts .card:hover, #guild .posts .card:hover, #settings-guild .posts .card:hover {
	background-color: $gray-600;
}

.post-title {
	font-size: 16px;
	font-weight: $font-weight-bold;
	word-break: break-word;
	overflow: hidden;
}

.post-title a {
	color: $black;
}

.post-title a:hover, .post-title a:active, .post-title a:focus	{
	text-decoration: none;
	color: $primary;
}

#frontpage .post-title a {
	color: $black;
}

#frontpage .post-title a:hover, #frontpage .post-title a:active, #frontpage .post-title a:focus	{
	text-decoration: none;
	color: $black;
}

.stretched-link a:hover {
	color: $purple
}

.post-meta {
	position: relative;
	z-index: 2;
	color: $muted;
	font-size: $small-font-size;
	width: fit-content;
}

#frontpage .posts .card .card-footer, #userpage .posts .card .card-footer, #thread .card .card-footer, #search .posts .card .card-footer, #guild .posts .card .card-footer {
	border: 0;
	background-color: transparent;
	padding: 0;
}

.post-body {
	word-break: break-word;
	overflow: hidden;
}

// Modals (post actions, delete confirmations, etc)

.modal-backdrop.show {
	opacity: 1;
	background-color:rgba(30,30,30,0.9);
}

.modal-header {
	border-bottom: none;
	background-color: $gray-400;
	border-top-left-radius: $border-radius;
	border-top-right-radius: $border-radius;
	padding: 0.5rem 1rem;
	box-shadow: $box-shadow;
}

.modal-header .close {
	padding: 1.25rem 1rem 1.25rem 0.5rem;
}

.modal-content {
	border: none;
	background-color: $gray-400;
	border-radius: $border-radius;
	box-shadow: $box-shadow;
}

.modal-footer {
	border: none;
	background-color: $gray-400;
	border-bottom-right-radius: $border-radius;
	border-bottom-left-radius: $border-radius;
	background-image: linear-gradient(180deg, #ffffff00 25%, $gray-400 100%)!important;
}

.modal .post-actions .list-group-item {
	border: none;
	border-radius: $border-radius;
	background-color: $gray-400;
}

.modal .post-actions .list-group-item:focus, .modal .post-actions .list-group-item:hover {
	background-color: $gray-300;
}

.modal .post-actions a {
	color: $black;
	font-size: $font-size-base;
}

.modal .post-actions .fa, .modal .post-actions .fas, .modal .post-actions .far {
	width: 1.25rem;
	font-size: $font-size-base;
}

.post-actions {
	position: relative;
	color: $muted;
	font-weight: $font-weight-bold;
	font-size: $small-font-size;
	z-index: 3;
}

.post-actions .fa, .post-actions .fas, .post-actions .far {
	font-size: $small-font-size;
	margin-right: .5rem;
	width: 1rem;
}

.post-actions .voting .fa, .post-actions .voting .fas, .post-actions .voting .far {
	color: inherit;
}

.post-actions .fa-ellipsis-v {
	font-size: $font-size-lg;
}

.post-actions .dropdown-item:active .fa, .post-actions .dropdown-item:active .fas {
	color: $black;
}

.post-actions .dropdown-item:hover .fa, .post-actions .dropdown-item:hover .fas {
	color: $gray;
}

.post-actions a:hover .fa, .post-actions a:hover .fas {
	color: $black;
}

.post-actions:hover, .post-actions:focus {
	z-index: 4;
}

.post-actions .copy-link:hover	{
	color: $black;
}

.post-actions .fas.fa-ellipsis-h, .post-actions .far.fa-ellipsis-h {
	font-size: $font-size-lg;
	vertical-align: middle;
}

.post-actions .removeDropdownItem.dropdown-item:hover, .post-actions .removeDropdownItem.dropdown-item:focus, .post-actions .removeDropdownItem.dropdown-item.active {
	color: $white;
	text-decoration: none;
	background-color: $warning;
}

.post-actions .removeDropdownItem.dropdown-item:hover .fas, .post-actions .removeDropdownItem.dropdown-item:focus .fas, .post-actions .removeDropdownItem.dropdown-item.active .fas, .post-actions .removeDropdownItem.dropdown-item:hover .far, .post-actions .removeDropdownItem.dropdown-item:focus .far, .post-actions .removeDropdownItem.dropdown-item.active .far
.post-actions .removeDropdownItem.dropdown-item:hover .fa, .post-actions .removeDropdownItem.dropdown-item:focus .fa, .post-actions .removeDropdownItem.dropdown-item.active .fa {
	color: $white;
}

.post-actions .approveDropdownItem.dropdown-item:hover, .post-actions .approveDropdownItem.dropdown-item:focus, .post-actions .approveDropdownItem.dropdown-item.active {
	color: $white;
	text-decoration: none;
	background-color: $success;
}

.post-actions .approveDropdownItem.dropdown-item:hover .fas, .post-actions .approveDropdownItem.dropdown-item:focus .fas, .post-actions .approveDropdownItem.dropdown-item.active .fas, .post-actions .approveDropdownItem.dropdown-item:hover .far, .post-actions .approveDropdownItem.dropdown-item:focus .far, .post-actions .approveDropdownItem.dropdown-item.active .far
.post-actions .approveDropdownItem.dropdown-item:hover .fa, .post-actions .approveDropdownItem.dropdown-item:focus .fa, .post-actions .approveDropdownItem.dropdown-item.active .fa {
	color: $white;
}

.post-actions .list-inline {
	margin-bottom: 0;
}

.post-actions .list-inline .list-inline-item {
	margin-right: 1rem;
}

.post-actions .list-inline .list-inline-item:last-child {
	margin-right: 0;
}

.close .far, .close .fab, .close .fal, .close .fas {
	font-size: 1.25rem;
}

// Small devices (landscape phones, less than 768px)
@media (max-width: 767.98px) {
	.modal.modal.modal-sm-bottom .modal-dialog {
		position: fixed;
		right: 0;
		bottom: 0;
		left: 0;
		z-index: 1030;
	}

	.modal.modal-sm-bottom .modal-content {
		position: absolute;
		bottom: 0;
		border-radius: 1rem;
	}

	.modal.fade.modal-sm-bottom .modal-dialog {
		transform: translate3d(0, 100vh, 0);
	}

	.modal.show.modal-sm-bottom .modal-dialog {
		transform: translate3d(0, 0, 0);
	}

	.modal.modal-sm-bottom .modal-header {
		border-top-right-radius: 1rem;
		border-top-left-radius: 1rem;
	}
	#search, #guild {
		padding-top: 98px;
	}
}

// Dropdown actions

.dropdown-actions {
	position: relative;
	color: $muted;
	font-weight: $font-weight-bold;
	font-size: $small-font-size;
	z-index: 3;
}
/* ... */

